--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -26,8 +26,8 @@ appPath=${user.dir}/bundle-to-test/android/Android.SauceLabs.Mobile.Sample.app.2
 
 # Device / platform defaults
 platform=Android
-udid=ef7a8b61
-deviceName=RMX1901
+udid=emulator-5554
+deviceName=emu64xa
 appPackage=com.swaglabsmobileapp
 appActivity=com.swaglabsmobileapp.MainActivity
 bundleId=com.example.ios.app
