--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ services:
   # and usually run the container privileged.
   appium:
     image: appium/appium:v2.19.0-p4
-    ports:
-      - "4723:4723"
+    # Do NOT publish the port to the host by default (prevents CI failures when 4723 is already in use).
+    # The tests container can still reach Appium via http://appium:4723 on the compose network.
+    # For local debugging where you want to access Appium from the host, enable the "host-expose" profile.
     environment:
       APPIUM_BASE_PATH: "/"
     restart: unless-stopped
@@ -12,6 +13,16 @@ services:
     # privileged: true
     # volumes:
     #   - /dev/bus/usb:/dev/bus/usb
+
+  # Optional profile to expose Appium to the host (useful for local debugging)
+  appium-host:
+    image: appium/appium:v2.19.0-p4
+    profiles: ["host-expose"]
+    ports:
+      - "4723:4723"
+    environment:
+      APPIUM_BASE_PATH: "/"
+    restart: unless-stopped
 
   tests:
     build:
