--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,9 +2,14 @@
 # Use this file to enable programmatic Appium start and other defaults.
 
 # Start local Appium via AppiumManager (true/false)
-appium.local=true
+# In Docker/CI, Appium is usually provided by docker-compose, so keep this off.
+appium.local=false
 
-# Appium host and port
+# Appium server URL (compose service name by default).
+# Can be overridden in CI with: -DappiumServerUrl=$APPIUM_SERVER_URL
+appiumServerUrl=http://appium:4723
+
+# Appium host and port (only used when appium.local=true)
 appium.host=127.0.0.1
 appium.port=4723
 
