--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   # and usually run the container privileged.
   appium:
     image: appium/appium:v2.19.0-p4
+    profiles: ["appium"]
     # Do NOT publish the port to the host by default (prevents CI failures when 4723 is already in use).
     # The tests container can still reach Appium via http://appium:4723 on the compose network.
     # For local debugging where you want to access Appium from the host, enable the "host-expose" profile.
@@ -15,10 +16,6 @@ services:
       interval: 5s
       timeout: 3s
       retries: 20
-    # For USB real device (Linux agents). On Windows Docker Desktop this is hard.
-    # privileged: true
-    # volumes:
-    #   - /dev/bus/usb:/dev/bus/usb
 
   # Optional profile to expose Appium to the host (useful for local debugging)
   appium-host:
@@ -34,10 +31,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    depends_on:
-      appium:
-        condition: service_healthy
-        required: true
     environment:
       # Allow overriding from the host or Jenkins with APPIUM_SERVER_URL.
       # Default points to the compose service 'appium'.
