--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,12 +2,16 @@
 # Use this file to enable programmatic Appium start and other defaults.
 
 # Start local Appium via AppiumManager (true/false)
-# In Docker/CI, Appium is usually provided by docker-compose, so keep this off.
+# In Docker/CI, Appium is usually provided externally, so keep this off.
 appium.local=false
 
-# Appium server URL (compose service name by default).
-# Can be overridden in CI with: -DappiumServerUrl=$APPIUM_SERVER_URL
-appiumServerUrl=http://appium:4723
+# Never attempt to install/run Appium via npx from the test runner container.
+appium.fallback.enabled=false
+
+# Appium server URL.
+# In Jenkins on Windows (host Appium), tests inside Docker should use host.docker.internal.
+# Can be overridden with APPIUM_SERVER_URL env var or -DappiumServerUrl=...
+appiumServerUrl=http://host.docker.internal:4723
 
 # Appium host and port (only used when appium.local=true)
 appium.host=127.0.0.1
