Add test data files and enhance Docker execution configuration

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,52 +1,97 @@
-# Configuration file for mobilex-test
-# Use this file to enable programmatic Appium start and other defaults.
+# =====================================================
+# MOBILEX TEST FRAMEWORK CONFIGURATION
+# =====================================================
+#
+# EXECUTION MODE:
+# ---------------
+# Use -Denv=local  for local execution (Appium on localhost)
+# Use -Denv=docker for Docker/Jenkins execution (Appium on host.docker.internal)
+#
+# Examples:
+#   Local:  mvn test -Denv=local
+#   Docker: mvn test -Denv=docker
+#   Maven:  mvn test -Plocal   OR   mvn test -Pdocker
+#
+# =====================================================
 
-# Start local Appium via AppiumManager (true/false)
-# In Docker/CI, Appium is usually provided externally, so keep this off.
+# Execution environment: local | docker (default: local)
+# Override with -Denv=local or -Denv=docker
+env=local
+
+# =====================================================
+# APPIUM SERVER CONFIGURATION
+# =====================================================
+
+# Appium server URL - automatically set based on env:
+# - local:  http://127.0.0.1:4723
+# - docker: http://host.docker.internal:4723
+# Can be overridden with APPIUM_SERVER_URL env var or -DappiumServerUrl=...
+appiumServerUrl=http://127.0.0.1:4723
+
+# Start local Appium programmatically (true/false)
+# Set to false in Docker/CI where Appium runs externally
 appium.local=false
 
-# Never attempt to install/run Appium via npx from the test runner container.
+# Appium fallback to npx (only for local development)
 appium.fallback.enabled=false
-
-# Appium server URL.
-# In Jenkins on Windows (host Appium), tests inside Docker should use host.docker.internal.
-# Can be overridden with APPIUM_SERVER_URL env var or -DappiumServerUrl=...
-appiumServerUrl=http://host.docker.internal:4723
 
 # Appium host and port (only used when appium.local=true)
 appium.host=127.0.0.1
 appium.port=4723
 
-# Enforce Appium major version (default 2). If Appium server reports a different major version, startup will fail.
+# Enforce Appium major version (default 2)
 appium.major.version=2
 
-# Seconds to wait for Appium /status during startup validation
+# Timeout for Appium startup validation
 appium.start.timeout.seconds=30
 
-# Optional: specify node executable and Appium main JS if you want AppiumDriverLocalService to use them
-# Example Windows paths (uncomment and set if needed):
-# appium.node=C:\\Program Files\\nodejs\\node.exe
-# appium.js=C:\\path\\to\\appium\\build\\lib\\main.js
+# =====================================================
+# DEVICE CONFIGURATION
+# =====================================================
 
-# If left blank, fallback will attempt to run 'npx appium'
-
-# App under test (default points at bundle-to-test/android APK)
-appPath=${user.dir}/bundle-to-test/android/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
-
-# Device / platform defaults
 platform=Android
-udid=emulator-5554
-deviceName=emu64xa
-appPackage=com.swaglabsmobileapp
-appActivity=com.swaglabsmobileapp.MainActivity
+udid=ef7a8b61
+deviceName=RMX1901
+appPackage=sg.com.hsbc.hsbcsingapore.cert
+appActivity=com.hsbc.mobilebanking.splash.SplashActivity
 bundleId=com.example.ios.app
 
-# Test framework defaults
+# App under test
+appPath=${user.dir}/bundle-to-test/android/hsbc/singapore-cert-3.66.0-2112142-secure-debugProguard-11381.signed.rasp.apk
+
+# =====================================================
+# TEST FRAMEWORK SETTINGS
+# =====================================================
+
 thread.count=1
 retry.count=1
 wait.seconds=10
 newCommandTimeout.seconds=300
 
-# Test credentials (override as needed)
+# Test credentials
 test.user=standard_user
 test.pass=secret_sauce
+
+# =====================================================
+# REPORTING & SCREENSHOTS
+# =====================================================
+
+screenshot.on.failure=true
+screenshot.on.success=false
+screenshot.directory=target/screenshots
+
+video.recording.enabled=false
+video.max.duration.minutes=5
+video.cleanup.days=7
+
+report.html.enabled=true
+report.allure.enabled=true
+report.performance.enabled=true
+
+# =====================================================
+# PARALLEL EXECUTION
+# =====================================================
+
+parallel.enabled=false
+parallel.thread.count=1
+parallel.data.provider.thread.count=1
