--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
         <log4j2.version>2.20.0</log4j2.version>
         <!-- Align Selenium to 4.28.0 which is compatible with Appium 9.4.0 -->
         <selenium.version>4.28.0</selenium.version>
+
+        <!-- Default values so surefire property interpolation never fails -->
+        <env>local</env>
+        <appiumServerUrl>http://127.0.0.1:4723</appiumServerUrl>
+        <deviceName>RMX1901</deviceName>
+        <udid>ef7a8b61</udid>
     </properties>
 
     <dependencyManagement>
@@ -84,8 +90,82 @@
             <artifactId>log4j-core</artifactId>
             <version>${log4j2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.browserstack</groupId>
+            <artifactId>browserstack-java-sdk</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
+        <!-- Gson for JSON parsing -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+        <!-- Apache POI for Excel support -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version>
+        </dependency>
+
+        <!-- AssertJ for fluent assertions -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JavaFaker for test data generation -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
+        <!-- Owner for configuration management -->
+        <dependency>
+            <groupId>org.aeonbits.owner</groupId>
+            <artifactId>owner</artifactId>
+            <version>1.0.12</version>
+        </dependency>
 
     </dependencies>
+
+    <profiles>
+        <!-- ============================================= -->
+        <!-- LOCAL PROFILE: Run tests on local machine    -->
+        <!-- Usage: mvn test -Plocal                      -->
+        <!-- ============================================= -->
+        <profile>
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <env>local</env>
+                <appiumServerUrl>http://127.0.0.1:4723</appiumServerUrl>
+                <deviceName>RMX1901</deviceName>
+                <udid>ef7a8b61</udid>
+            </properties>
+        </profile>
+
+        <!-- ============================================= -->
+        <!-- DOCKER PROFILE: Run tests in Docker/Jenkins  -->
+        <!-- Usage: mvn test -Pdocker                     -->
+        <!-- ============================================= -->
+        <profile>
+            <id>docker</id>
+            <properties>
+                <env>docker</env>
+                <appiumServerUrl>http://host.docker.internal:4723</appiumServerUrl>
+                <deviceName>RMX1901</deviceName>
+                <udid>ef7a8b61</udid>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
@@ -125,6 +205,11 @@
                     </suiteXmlFiles>
                     <systemPropertyVariables>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                        <!-- Pass env flag to Config class -->
+                        <env>${env}</env>
+                        <appiumServerUrl>${appiumServerUrl}</appiumServerUrl>
+                        <deviceName>${deviceName}</deviceName>
+                        <udid>${udid}</udid>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
